Add requests-cache dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 lxml==3.5.0
 wheel==0.29.0
 terminaltables==2.1.0
+requests-cache==0.4.12
 
 # tests dependencies
 coverage==4.0.3
 pep8==1.7.0
 pylint==1.5.4
 nose==1.3.7
+
+# Needed when using mongodb backend on requests-cache:
+# pymongo<3
