--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ nose==1.3.7
 
 # competitors dependencies
 websocket-client==0.35.0  # righter
+language-check==0.8  # LanguageTool
 
 # Needed when using mongodb backend on requests-cache:
 # pymongo<3
