--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+beautifulsoup4==4.5.1
 Flask==0.11.1
 lxml==3.5.0
 pyenchant==1.6.8
+regex==2016.8.27
 requests-cache==0.4.12
 terminaltables==2.1.0
 wheel==0.29.0
